quick fix: card alignment

--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -54,6 +54,7 @@
 
     &:hover {
         transform: translateY(-1px);
+        cursor: pointer;
     }
 }
 
