--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -3,8 +3,8 @@
 // Mobile-first: Base styles (mobile)
 .card {
     display: flex;
-    flex-flow: column wrap;
-    justify-content: space-evenly;
+    flex-direction: column;
+    justify-content: space-between;
     box-shadow: 0px 4px 4px rgba(0,0,0,0.25);
     width: 100%;
     max-width: 100%;
